--- a/apps/carsInUK/src/index.html
+++ b/apps/carsInUK/src/index.html
@@ -31,6 +31,10 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.js"></script>
 
+    <!-- elasticsearch -->
+    <script src="jsLib/elasticsearch-js-13_1/elasticsearch.jquery.min.js"></script>
+
+    <!-- google map -->
     <script src="https://maps.googleapis.com/maps/api/js" async defer></script>
 
     <!--link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.2/css/mdb.min.css'-->
