--- a/apps/jeymartECommerce/public/clientView/code/landingInfoSpy.html
+++ b/apps/jeymartECommerce/public/clientView/code/landingInfoSpy.html
@@ -189,8 +189,8 @@
     evaluate and compare if the values from document 1 and document 2 are
     actually referring to the same values. Hence to make our life easier,
     we can only use <mark>NON text-analyzed</mark> fields to do the aggregation.
-    <p style="margin-top: 8px;"/>
-    <span style="color: red;">MISSING THE PHOTOS ON CHANGE OF CRITERIA AND THE FACETS UPDATES</span>
+    <!--p style="margin-top: 8px;"/>
+    <span style="color: red;">MISSING THE PHOTOS ON CHANGE OF CRITERIA AND THE FACETS UPDATES</span-->
   </div>
 
 
