--- a/apps/jeymartECommerce/public/clientView/code/landingListingSpy.html
+++ b/apps/jeymartECommerce/public/clientView/code/landingListingSpy.html
@@ -30,10 +30,10 @@
     integrate <mark>Elasticsearch</mark> with the view technology stack, all
     the components involved are coded as simple as possible
     <i class="fa fa-smile-o" aria-hidden="true"></i>)
-  <div>
+  </div>
 
   <div class='sf-chapter-sub-label'>the Query and the Facets filters</div>
-  <div class='sf-paragraph-sub text-justify' style="overflow: auto;">
+  <div class='sf-paragraph-sub text-justify' >
     There are typically 2 ways to trigger a search for the listing. One of the ways
     is to type in something in the <mark>searchbar</mark> component and press
     the "search" (magnifying glass) button. The 2nd way is to chosen an option
