--- a/apps/nycTaxiHub/public/clientView/code/taxiNearbySpy.html
+++ b/apps/nycTaxiHub/public/clientView/code/taxiNearbySpy.html
@@ -106,15 +106,15 @@
     By now, you have an idea how Geo-distance works! In real world use cases,
     shared-economy transportation apps use similar geolocation technologies to
     locate vehicles (automobiles, taxis or vans) for services. Basically, the
-    vehicles would update their geo-locatin through GPS; take an example, if
+    vehicles would update their geo-location data through GPS; take an example, if
     you are trying to call a vehicle (could be a taxi) at NYC Times Square, the
     app would use Times Square's latitude and longitude pair as the origin and
     starts to find the available vehicles within a certain distance (e.g. 2 miles).
     Theoretically, the vehicles should be sorted or scored base on how near
-    they are to the origin point.
+    they are from the origin point.
     <p style="margin-top: 8px;"/>
-    There are so many applications that also make use of Geolocations technology;
-    dating apps and chat-based apps also have geo-distance features like
+    There are also many applications that make use of Geolocations technology;
+    dating apps and chat apps also have geo-distance features like
     "find a person nearby". Typically if your business or app could collect
     geolocation information, there might be a chance to add new services / features
     based on geo-distance(s).
